# wildbg

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md
.github/workflows/: cbindgen.yml  ci.yml
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: expert_bench.rs  helper.rs  inputs_bench.rs  move_generation_bench.rs  onnx_bench.rs  position_bench.rs  rollout_bench.rs
crates/benchmarks/resources/: contact.csv  race.csv
crates/coach/: Cargo.toml
crates/coach/src/: coach_helpers.rs  data.rs  duel.rs  lib.rs  position_finder.rs  print_helpers.rs  rollout.rs  unwrap.rs
crates/coach/src/position_finder/: discrepancy_selector.rs  diverse_selector.rs  finder_rand.rs
crates/engine/: Cargo.toml
crates/engine/src/: complex.rs  composite.rs  dice.rs  dice_gen.rs  evaluator.rs  inputs.rs  lib.rs  multiply.rs  onnx.rs  position.rs  probabilities.rs
crates/engine/src/inputs/: expert.rs
crates/engine/src/position/: conversion.rs  double_moves.rs  mixed_moves.rs  regular_moves.rs
crates/logic/: Cargo.toml
crates/logic/src/: bg_move.rs  cube.rs  lib.rs  wildbg_api.rs
crates/logic/src/bg_move/: double.rs  mixed.rs  regular.rs
crates/web/: Cargo.toml
crates/web/src/: axum.rs  lib.rs  startup.rs  web_api.rs
crates/wildbg-c/: Cargo.toml  wildbg.h
crates/wildbg-c/src/: lib.rs
docs/dev/: architecture.md  engine.md  training.md
docs/user/: wildbg-c.md
neural-nets/: contact.onnx  race.onnx  wildbg.onnx
src/: axum.rs  bg_move.rs  cube.rs  dice.rs  dice_gen.rs  duel.rs  evaluator.rs  inputs.rs  lib.rs  main.rs  onnx.rs  position.rs  position_finder.rs  probabilities.rs  rollout.rs  web_api.rs
src/bg_move/: double.rs  regular.rs
src/position/: double_moves.rs  regular_moves.rs
training/: pyproject.toml  requirements-dev.txt  requirements.txt  train-on-rollout-data.py
training/src/: dataset.py  helper.py  model.py  tiny_model.py  train-on-rollout-data.py  train_contact.py  train_race.py
