[package]
name = "wildbg"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
axum = "0.6.20"
fastrand = "2.0.0"
hyper = "0.14.27"
rayon = "1.7.0"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tract-onnx = "0.20.7"
