[project]
name = "wildbg"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies", "version"]


[project.urls]
Repository = "https://github.com/carsten-wenderdel/wildbg/"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt"] }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ['py311']
