[package]
name = "engine"

version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# external
fastrand = "2.0.1"
tract-onnx = { git = "https://github.com/sonos/tract.git", rev = "c2bfc46b67c21b769944d1955a2db9e9116cc928" }
tract-core = { git = "https://github.com/sonos/tract.git", rev = "c2bfc46b67c21b769944d1955a2db9e9116cc928" }
tract-data = { git = "https://github.com/sonos/tract.git", rev = "c2bfc46b67c21b769944d1955a2db9e9116cc928" }
base64 = "0.22.1"
