[package]
name = "engine"

version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# external
fastrand = { workspace = true }
# We won't update beyond tract 0.21.7 because of performance regressions: https://github.com/sonos/tract/issues/1803
tract-onnx = "=0.21.7"
base64 = "0.22.1"
