[package]
name = "logic"

version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# internal
engine = { path = "../engine" }
# external
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.107"
utoipa = {version = "3.5.0", features = ["axum_extras", "preserve_order"]}

