[package]
name = "logic"

version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# internal
engine = { path = "../engine" }
# external
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
utoipa = { workspace = true, features = ["axum_extras", "preserve_order"] }

