[package]
name = "web"

version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "server"

[dependencies]
# internal
engine = { path = "../engine" }
logic = { path = "../logic", features = ["web"] }
# external
axum = "0.7.4"
hyper = "*"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shuttle-axum = { version = "0.45.0" }
shuttle-runtime = "*"
tokio = { version = "*", features = ["full"] }
tower = "*"
utoipa = { workspace = true, features = ["axum_extras", "preserve_order"] }
utoipa-swagger-ui = { version = "*", features = ["axum"] }
clap = { version = "4.5.2", features = ["derive"] }

[dev-dependencies]
http-body-util = "0.1.0"
