[package]
name = "web"

version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "server"

[dependencies]
# internal
engine = { path = "../engine" }
logic = { path = "../logic" }
# external
axum = "0.6.20"
hyper = "0.14.27"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
shuttle-axum = "0.27.0"
shuttle-runtime = "0.27.0"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
utoipa = {version = "3.5.0", features = ["axum_extras", "preserve_order"]}
utoipa-swagger-ui = {version = "3.1.5", features = ["axum"]}
