[package]
name = "web"

version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "server"

[dependencies]
# internal
engine = { path = "../engine" }
logic = { path = "../logic", features = ["web"] }
# external
axum = "0.8.4"
clap = { workspace = true, features = ["derive"] }
hyper = "*"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "*", features = ["full"] }
tower = "*"
utoipa = { workspace = true, features = ["axum_extras", "preserve_order"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[dev-dependencies]
http-body-util = "0.1.0"
